--- a/app/src/main/res/layout/fragment_bill_details.xml
+++ b/app/src/main/res/layout/fragment_bill_details.xml
@@ -76,8 +76,19 @@
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:id="@+id/edit"
             android:layout_gravity="center_vertical"
+            android:background="?attr/selectableItemBackground"
             android:src="@drawable/ic_edit"
+            android:layout_marginEnd="@dimen/_10sdp"
+            app:tint="@color/gray" />
+        <ImageView
+            android:layout_width="24dp"
+            android:id="@+id/delete"
+            android:layout_height="24dp"
+            android:background="?attr/selectableItemBackground"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/delete"
             app:tint="@color/gray" />
 
     </LinearLayout>
