--- a/app/src/main/res/layout/fragment_friends_all_expenses.xml
+++ b/app/src/main/res/layout/fragment_friends_all_expenses.xml
@@ -19,9 +19,9 @@
 
             <ImageButton
                 android:id="@+id/backButton"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_margin="16dp"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:layout_margin="10dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:src="@drawable/back"
                 app:layout_constraintStart_toStartOf="parent"
@@ -31,9 +31,9 @@
 
             <ImageButton
                 android:id="@+id/settingsButton"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_margin="16dp"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:layout_margin="10dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:src="@drawable/setting"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -74,9 +74,9 @@
                 android:layout_gravity="start"
                 android:layout_marginStart="@dimen/_40sdp"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:text="Dobe"
+                android:text=""
                 android:id="@+id/contact"
-                android:textSize="24sp"
+                android:textSize="22sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -86,6 +86,7 @@
                 android:layout_gravity="start"
                 android:layout_marginStart="@dimen/_40sdp"
                 android:layout_marginTop="8dp"
+                android:visibility="gone"
                 android:text="No expenses here yet."
                 android:textColor="@color/gray"
                 android:textSize="@dimen/_13ssp" />
