--- a/app/src/main/res/navigation/navgraph.xml
+++ b/app/src/main/res/navigation/navgraph.xml
@@ -144,8 +144,7 @@
         <argument
             android:name="expenseRecord"
             app:argType="com.appdev.split.Model.Data.ExpenseRecord"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            app:nullable="true" />
         <argument
             android:name="friendsContact"
             app:argType="string"
