--- a/app/src/main/res/layout/fragment_bill_details.xml
+++ b/app/src/main/res/layout/fragment_bill_details.xml
@@ -56,14 +56,6 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/t"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Added by you on "
-                    android:textColor="@color/gray"
-                    android:textSize="14sp" />
-
-                <TextView
                     android:id="@+id/date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -101,6 +93,10 @@
         android:text="Expense details"
         android:textSize="20sp"
         android:textStyle="bold" />
+    <com.google.android.material.divider.MaterialDivider
+        android:layout_width="match_parent"
+        android:layout_marginTop="@dimen/_3sdp"
+        android:layout_height="1dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -117,7 +113,7 @@
                 android:id="@+id/paidBy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="You paid "
+                android:text="Total Amount: "
                 android:textColor="@color/black"
                 android:textSize="20sp" />
             <TextView
@@ -151,13 +147,6 @@
                 android:textColor="@color/gray"
                 android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/Ownersplit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="$300"
-                android:textColor="@color/gray"
-                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -178,13 +167,7 @@
                 android:textColor="@color/gray"
                 android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/friendSplit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="$122"
-                android:textColor="@color/gray"
-                android:textSize="16sp" />
+
         </LinearLayout>
 
     </LinearLayout>
@@ -197,7 +180,10 @@
         android:text="Description"
         android:textSize="20sp"
         android:textStyle="bold" />
-
+    <com.google.android.material.divider.MaterialDivider
+        android:layout_width="match_parent"
+        android:layout_marginTop="@dimen/_3sdp"
+        android:layout_height="1dp" />
 
     <TextView
         android:id="@+id/description"
