--- a/app/src/main/res/layout/fragment_personal_expense.xml
+++ b/app/src/main/res/layout/fragment_personal_expense.xml
@@ -7,7 +7,9 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:scrollbars="vertical"
-    tools:context=".PersonalExpenseFragment">
+    tools:context=".UI.Fragment.SingleDostAddExpenseFragment">
+
+
 
 
     <RelativeLayout
@@ -95,6 +97,19 @@
 
             </LinearLayout>
         </LinearLayout>
+
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmer_view_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:shimmer_duration="1000">
+
+            <ViewStub
+                android:id="@+id/shimmer_view_friendList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/selectedFrisRecyclerView"
