--- a/app/src/main/res/layout/fragment_group_detail.xml
+++ b/app/src/main/res/layout/fragment_group_detail.xml
@@ -72,6 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
+                android:id="@+id/nameOfGroup"
                 android:layout_marginStart="@dimen/_40sdp"
                 android:layout_marginTop="@dimen/_40sdp"
                 android:text="Dobe"
